Nu ska den vara klar :)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div id="content">
             <!-- Horoskopet -->
         </div>
+
+        Fyll i ditt personnummer (ååmmdd) för att se ditt stjärntecken! <br/> <br/>
         <input type="number" placeholder="åå-mm-dd" name="personalNumber" id="personalNumber"/>
         <div id="buttonsDiv">
             <div id="saveMyHoroscopeDiv">
@@ -32,8 +34,6 @@
     </div>
 <script>
     runView();
-    $("#updateMyHoroscopeDiv").hide()
-    $("#eraseDiv").hide();
 </script>
 
 </body>
